Changelog
=========

1.1.8 - unreleased
------------------

- Fixed return value of multi selection widget _value method. The template 
  tries to get len() of the value, but fails if the value is None. This allows
  to use multi selection widget in the portlets, for example.
  [naro]

1.1.7 - 2009-03-07
------------------

- Fixed inline save of 'title' field raises 'Invalid request' error.
  This closes http://dev.plone.org/plone/ticket/8189.
  [deo]

1.1.6 - 2008-11-21
------------------

- Made a test less dependent on the exact HTML output, so it works across
  Zope versions with slightly different newline ending semantics.
  [hannosch]

- Only include KSS subpackage if kss.core is available.
  [hannosch]

- Fixed KSS payload tests to omit a trailing newline.
  [hannosch]

- Use structure for errors again, this seems to have been lost in the merge
  of r19540.
  [elro]

plone.app.form - 1.1.5 Released August 18th, 2008

    - Add a MultiCheckBoxWidget that uses <label>s to be accessible.
      [csenger]

    - Forced the input values of the datecomponents into integers before doing
      calculations with them. This closes
      http://dev.plone.org/plone/ticket/6737.
      [hannosch]

    - Synchronized the default value behavior of all fields in the datetime
      widget. This closes http://dev.plone.org/plone/ticket/6988.
      [hannosch]

plone.app.form - 1.1.0 Released April 20th, 2008

    - Changed the patch warning to debug level. This is nothing the end users
      have to see.
      [hannosch]

plone.app.form - 1.1.0a1

    - Improve KSS inline validation for complex widgets like the 
      UberSelectionwidget that require more than a single form value to
      validate.
      [optilude]

    - PLIP202: add support for KSS validation and inline editing for formlib
      forms
      [optilude]

plone.app.form - 1.0.5

    - For the USW:
      Made description of search result and current selection items